# content-samurai

./: .env.example  .gitignore  biome.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json  turbo.json
.turbo/preferences/: tui.json
apps/agent/: .env.example  README.md  config.py  env.template  main.py  package.json  pyproject.toml
apps/agent/app/: __init__.py
apps/agent/app/api/: main.py
apps/agent/app/tools/: __init__.py  web_scraper.py
apps/agent/app/workers/: __init__.py  content_agent.py  tools.py
apps/api/: go.mod  go.sum  main.go  package.json
apps/api/internal/config/: config.go
apps/api/internal/http/: router.go
apps/api/internal/http/handlers/: blog.go  sse.go
apps/api/internal/model/: model.go
apps/api/internal/queue/: rabbitmq.go
apps/api/internal/stream/: redis.go
apps/web/: .env.example  biome.json  package-lock.json  package.json  vite.config.ts
apps/web/src/: app.css
apps/web/src/app/: __root.tsx  index.tsx
apps/web/src/components/: blog-generator.tsx  service-status.tsx  theme-toggle.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx  progress.tsx  textarea.tsx
apps/web/src/contexts/: ThemeContext.tsx
apps/web/src/hooks/: useBlogGeneration.ts  useKeyboardShortcuts.ts  useSEOMetrics.ts
apps/web/src/lib/: config.ts
docs/: QUICK_START.md  README.md  SEO_ENHANCEMENTS.md
