[project]
name = "agent"
version = "0.1.0"
description = "Content Samurai Agent"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "fastapi",
    "uvicorn",
    "redis",
    "rq",
]

[tool.uv]
dev-dependencies = []
