[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "fastapi",
    "uvicorn",
    "redis",
    "rq",
    "langchain-ollama>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
